--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,3 +1,3 @@
 steps:
-  - label: ":hammer: Example Script"
-    command: "echo ${DEV}"
+  - label: "echo service_name"
+    command: "echo ${SERVICE_NAME}"
