--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,3 +1,10 @@
 steps:
-  - label: "echo service_name"
-    command: "echo ${SERVICE_NAME}"
+  - group: testing
+    key: "testing"
+    steps:
+      - label: "echo step 1 in testing group"
+        command: "echo step 1 in testing group"
+        key: "step-1-in-testing"
+      - label: "echo step 2 in testing group"
+        command: "echo step 2 in testing group"
+        key: "step-2-in-testing"
